--- a/NJWeb/web/modules/content/problem/create.xhtml
+++ b/NJWeb/web/modules/content/problem/create.xhtml
@@ -51,13 +51,13 @@
                         </div>
                         <label for="memoLimit" class="col-md-1 control-label">Memoria Usada</label>
                         <div class="col-md-3">
-                            <p:spinner id="memoLimit" stepFactor="1" min="1" max="6"  placeholder="1"
-                                       value="#{problemBean.problemView.timeLimit}"
+                            <p:spinner id="memoLimit" stepFactor="1" min="1" max="5000"  placeholder="1"
+                                       value="#{problemBean.problemView.memoLimit}"
                                        required="true" />
                         </div>
                         <label for="timeProblem" class="col-md-1 control-label">Tiempo Juzgamiento</label>
                         <div class="col-md-3">
-                            <p:spinner id="timeProblem" stepFactor="1" min="1" max="6"  placeholder="1"
+                            <p:spinner id="timeProblem" stepFactor="1" min="1" max="9"  placeholder="1"
                                        value="#{problemBean.problemView.timeLimit}"
                                        required="true" />
                         </div>
